App.js -added RelatedAndComparison component RelatedAndComparison.js -imported Related and YourOutfit components SASS -added classes to _related_items.scss

--- a/atelier/public/styles/styles.css
+++ b/atelier/public/styles/styles.css
@@ -1,3 +1,19 @@
+.related-list {
+  display: flex;
+}
+
+.related-card {
+  display: flex;
+}
+
+.outfit-list {
+  display: flex;
+}
+
+.outfit-card {
+  display: flex;
+}
+
 .image-gallery {
   float: left;
 }
