made new .scss files for each components; added skeletal structure on ImageGallery, ShoppingCart, StyleSelector; need to figure out how to make an overlay on top of the main image on imageGallery

--- a/atelier/public/styles/styles.css
+++ b/atelier/public/styles/styles.css
@@ -1,3 +1,15 @@
+.style-selector .style-selector1 {
+  display: flex;
+  justify-content: space-around;
+}
+.style-selector .style-selector2 {
+  display: flex;
+}
+
+h1 {
+  background-color: white;
+}
+
 .image-gallery {
   float: left;
 }
