--- a/atelier/public/styles/styles.scss
+++ b/atelier/public/styles/styles.scss
@@ -1,29 +1,2 @@
-@import './overview/style-selector';
+@import './overview/overview';
 @import './question-answer/question_answer';
-.image-gallery {
-  float: left;
-}
-
-.product-summary {
-  float: right;
-}
-
-.overview {
-
-}
-
-.navbar {
-  display:flex;
-  justify-content: space-around;
-  margin-top: 30px;
-}
-
-.image-summary {
-  display: flex;
-  justify-content: center;
-
-}
-
-.slogan {
-  display:flex;
-}
