--- a/atelier/public/styles/overview/_overview.scss
+++ b/atelier/public/styles/overview/_overview.scss
@@ -4,15 +4,13 @@
 
 .image-gallery {
   float: left;
+  border-style: solid;
 }
 
 .product-summary {
   float: right;
 }
 
-.overview {
-
-}
 
 .navbar {
   display:flex;
