--- a/atelier/public/styles/styles.css
+++ b/atelier/public/styles/styles.css
@@ -1,13 +1,123 @@
+.related-comparison {
+  display: block;
+}
+
 .related-list {
-  display: flex;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  display: block;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+}
+
+.related-title {
+  text-align: left;
+}
+
+.left-arrow {
+  display: inline-flex;
+  position: absolute;
+  top: 40%;
+  z-index: 10;
+  left: 32px;
+}
+
+.right-arrow {
+  display: inline-flex;
+  right: 32px;
+  position: absolute;
+  top: 40%;
+  z-index: 10;
+}
+
+.fa-solid {
+  color: gray;
+  font-size: 300%;
+}
+
+.fa-solid:hover {
+  color: black;
+  font-size: 400%;
+}
+
+.related-carousel {
+  display: block;
+  width: 100vw;
+  position: relative;
+  overflow-x: scroll;
+  white-space: nowrap;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  scroll-behavior: smooth;
+}
+
+.related-carousel::-webkit-scrollbar {
+  display: none;
 }
 
 .related-card {
+  display: inline-block;
+  position: relative;
+  width: 250px;
+  height: 400px;
+  border: 1px solid gray;
+  border-radius: 10px;
+  margin: 20px;
+}
+
+.fa-regular.fa-star {
+  display: flex;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+.fa-regular.fa-star:hover {
+  font-size: 150%;
+}
+
+.card-image {
+  position: relative;
+  height: 300px;
+  width: 250px;
+  top: 0px;
+  z-index: -1;
+  overflow: hidden;
+}
+
+.card-info {
+  height: 100px;
+  position: absolute;
+  bottom: 0px;
+  text-align: left;
+  padding-left: 10px;
+  padding-top: 20px;
+  align-items: flex-end;
+}
+
+.card-category {
+  display: flex;
+  font-size: medium;
+}
+
+.card-name {
+  display: flex;
+  font-size: larger;
+}
+
+.card-price {
+  font-size: medium;
+  display: flex;
+}
+
+.card-stars {
   display: flex;
 }
 
 .outfit-list {
-  display: flex;
+  display: block;
+  height: 600px;
 }
 
 .outfit-card {
