added carousel functionality to thumbnail pictures in ImageGallery; todo: add the sliding animation, implement component tests;

--- a/atelier/public/styles/styles.css
+++ b/atelier/public/styles/styles.css
@@ -11,6 +11,9 @@
   left: 0;
   z-index: 9;
 }
+.image-gallery .thumbnails .thumbnail {
+  display: none;
+}
 .image-gallery .main {
   display: flex;
   position: relative;
