--- a/atelier/public/styles/styles.css
+++ b/atelier/public/styles/styles.css
@@ -19,7 +19,7 @@
 .left-arrow {
   display: inline-flex;
   position: absolute;
-  top: 40%;
+  top: 45%;
   z-index: 10;
   left: 32px;
 }
@@ -28,7 +28,7 @@
   display: inline-flex;
   right: 32px;
   position: absolute;
-  top: 40%;
+  top: 45%;
   z-index: 10;
 }
 
@@ -113,6 +113,60 @@
 
 .card-stars {
   display: flex;
+}
+
+.related-modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.related-modal-overlay {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  background-color: #000;
+  opacity: 0.5;
+}
+
+.related-modal-title {
+  display: flex;
+  position: fixed;
+  left: 10px;
+  top: 10px;
+}
+
+.related-modal-content {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  background-color: white;
+  display: flex;
+  z-index: 100;
+  border: 1px solid gray;
+  border-radius: 10px;
+  align-items: center;
+}
+
+.related-modal-content:after {
+  display: table;
+  clear: both;
+}
+
+.modal-column {
+  float: left;
+  padding: 10px;
 }
 
 .outfit-list {
