questions and answers v.2

--- a/atelier/public/styles/styles.scss
+++ b/atelier/public/styles/styles.scss
@@ -1,7 +1,9 @@
 @import './related-items/related_items';
 
+
 .image-gallery {
   float: left;
+}
 @import './ratings-reviews/ratings_reviews';
 @import './overview/overview';
 @import './question-answer/question_answer';
