--- a/atelier/public/styles/styles.css
+++ b/atelier/public/styles/styles.css
@@ -1,9 +1,298 @@
+.related-comparison {
+  display: block;
+}
+
+.related-list {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  display: block;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+}
+
+.related-title {
+  text-align: left;
+}
+
+.left-arrow {
+  display: inline-flex;
+  position: absolute;
+  top: 45%;
+  z-index: 10;
+  left: 32px;
+}
+
+.right-arrow {
+  display: inline-flex;
+  right: 32px;
+  position: absolute;
+  top: 45%;
+  z-index: 10;
+}
+
+.fa-solid {
+  color: gray;
+  font-size: 300%;
+}
+
+.fa-solid:hover {
+  color: black;
+  font-size: 400%;
+}
+
+.related-carousel {
+  display: block;
+  width: 100vw;
+  position: relative;
+  overflow-x: scroll;
+  white-space: nowrap;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+  scroll-behavior: smooth;
+}
+
+.related-carousel::-webkit-scrollbar {
+  display: none;
+}
+
+.related-card {
+  display: inline-block;
+  position: relative;
+  width: 250px;
+  height: 400px;
+  border: 1px solid gray;
+  border-radius: 10px;
+  margin: 20px;
+}
+
+.fa-regular.fa-star {
+  display: flex;
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+.fa-regular.fa-star:hover {
+  font-size: 150%;
+}
+
+.card-image {
+  position: relative;
+  height: 300px;
+  width: 250px;
+  top: 0px;
+  z-index: -1;
+  overflow: hidden;
+}
+
+.card-info {
+  height: 100px;
+  position: absolute;
+  bottom: 0px;
+  text-align: left;
+  padding-left: 10px;
+  padding-top: 20px;
+  align-items: flex-end;
+}
+.card-info .card-category {
+  display: flex;
+  font-size: medium;
+}
+.card-info .card-name {
+  display: flex;
+  font-size: larger;
+}
+.card-info .card-price {
+  font-size: medium;
+  display: flex;
+}
+.card-info .card-stars {
+  display: flex;
+}
+
+.related-modal {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.related-modal-overlay {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  background-color: #000;
+  opacity: 0.5;
+}
+
+.related-modal-content {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  background-color: white;
+  display: flex;
+  z-index: 100;
+  border: 1px solid gray;
+  border-radius: 10px;
+  align-items: center;
+}
+.related-modal-content .related-modal-title {
+  display: flex;
+  position: fixed;
+  left: 10px;
+  top: 10px;
+}
+
+.related-modal-content:after {
+  display: table;
+  clear: both;
+}
+
+.modal-column {
+  float: left;
+  padding: 10px;
+}
+
+.outfit-list {
+  display: block;
+  height: 600px;
+}
+
+.outfit-card {
+  display: flex;
+}
+
 /*reset css from user agent stylesheet*/
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   word-break: break-word;
+}
+
+.ratings-reviews {
+  /*use Roboto Google Fonts*/
+  font-family: "Roboto", sans-serif;
+  margin-top: 8%;
+  display: flex;
+  justify-content: center;
+  /*for the ReviewsList component*/
+  /*for the Ratings Component*/
+}
+.ratings-reviews .reviews-list {
+  text-align: left;
+  width: 40%;
+  margin-left: 5%;
+  font-size: 0.875rem;
+  /*number of stars and the user*/
+  /*review paragraph*/
+  /*helpful prompt*/
+}
+.ratings-reviews .reviews-list .star-user {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 2%;
+}
+.ratings-reviews .reviews-list .star-user #user-date {
+  font-size: 0.75rem;
+}
+.ratings-reviews .reviews-list p {
+  margin: 5% auto;
+  letter-spacing: -0.02rem;
+  word-spacing: -0.08rem;
+  line-height: 1rem;
+}
+.ratings-reviews .reviews-list #helpful {
+  font-size: 0.75rem;
+}
+.ratings-reviews .reviews-list .break {
+  margin: 5% auto;
+  border-top: 2px solid gray;
+}
+.ratings-reviews .ratings {
+  /*make the parent container relative so children can use absolute positioning*/
+  position: relative;
+  width: 35%;
+  /*100% of reviews recommend this product*/
+}
+.ratings-reviews .ratings h5 {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
+.ratings-reviews .ratings #num-stars {
+  display: flex;
+  justify-content: flex-start;
+  margin-top: 10%;
+}
+.ratings-reviews .ratings #num-stars #num {
+  font-size: 3rem;
+  margin-right: 10%;
+}
+.ratings-reviews .ratings #num-stars #stars {
+  padding-top: 2%;
+}
+.ratings-reviews .ratings p {
+  margin: 4% auto;
+  font-size: 0.85rem;
+  text-align: left;
+}
+.ratings-reviews .ratings .progress-bar {
+  font-size: 0.75rem;
+  margin: 2% auto;
+  display: flex;
+  justify-content: space-between;
+}
+.ratings-reviews .ratings .progress-bar .whole-bar {
+  background-color: lightgray;
+  width: 83%;
+  height: 0.75rem;
+}
+.ratings-reviews .ratings .progress-bar .whole-bar .partial-bar {
+  background-color: gray;
+  height: 0.75rem;
+}
+.ratings-reviews .ratings .progress-bar .whole-bar .partial-bar.five {
+  width: 40%;
+}
+.ratings-reviews .ratings .progress-bar .whole-bar .partial-bar.four {
+  width: 50%;
+}
+.ratings-reviews .ratings .progress-bar .whole-bar .partial-bar.three {
+  width: 60%;
+}
+.ratings-reviews .ratings .progress-bar .whole-bar .partial-bar.two {
+  width: 70%;
+}
+.ratings-reviews .ratings .progress-bar .whole-bar .partial-bar.one {
+  width: 80%;
+}
+.ratings-reviews .range {
+  text-align: left;
+  margin: 8% auto;
+}
+.ratings-reviews .range .size input {
+  width: 100%;
+}
+.ratings-reviews .range .comfort input {
+  width: 100%;
+}
+
+.image-gallery {
+  position: relative;
+  width: 50%;
+  height: auto;
 }
 .image-gallery .thumbnails {
   display: flex;
@@ -51,8 +340,9 @@
   display: flex;
 }
 
-*, *::before, *::after {
-  box-sizing: border-box;
+.image-gallery {
+  float: left;
+  border-style: solid;
 }
 
 .product-summary {
@@ -72,4 +362,18 @@
 
 .slogan {
   display: flex;
+}
+
+h1 {
+  background-color: white;
+}
+
+/*reset css from user agent stylesheet*/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  word-break: break-word;
+  /*use Roboto Google Fonts*/
+  font-family: "Roboto", sans-serif;
 }/*# sourceMappingURL=styles.css.map */
