--- a/atelier/public/styles/ratings-reviews/_ratings_reviews.scss
+++ b/atelier/public/styles/ratings-reviews/_ratings_reviews.scss
@@ -1,25 +1,20 @@
-/*reset css from user agent stylesheet*/
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  word-break: break-word;
-}
-
 
 .ratings-reviews {
-  /*use Roboto Google Fonts*/
-  font-family: 'Roboto', sans-serif;
+
   margin-top: 8%;
   display: flex;
   justify-content: center;
 
   /*for the ReviewsList component*/
   .reviews-list {
+    overflow: auto;
     text-align: left;
     width: 40%;
-    margin-left: 5%;
+    height: 100vh;
+    margin: auto 5%;
+    padding-right: 20px;
     font-size: 0.875rem;
+    position: relative;
     /*number of stars and the user*/
     .star-user {
       display: flex;
@@ -44,6 +39,11 @@
       margin: 5% auto;
       border-top: 2px solid gray;
     }
+    button {
+      position: absolute;
+      display: inline-block;
+    }
+
   }
 
 
