--- a/atelier/public/styles/styles.scss
+++ b/atelier/public/styles/styles.scss
@@ -1,37 +1,15 @@
 @import './related-items/related_items';
-
-
-.image-gallery {
-  float: left;
-}
 @import './ratings-reviews/ratings_reviews';
 @import './overview/overview';
 @import './question-answer/question_answer';
+@import './shared/star_rating';
 
-
-
-*, *::before, *::after {
+/*reset css from user agent stylesheet*/
+* {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-}
-
-.product-summary {
-  float: right;
-}
-
-
-
-.navbar {
-  display:flex;
-  justify-content: space-around;
-  margin-top: 30px;
-}
-
-.image-summary {
-  display: flex;
-  justify-content: center;
-
-}
-
-.slogan {
-  display:flex;
+  word-break: break-word;
+  /*use Roboto Google Fonts*/
+  font-family: 'Roboto', sans-serif;
 }
