--- a/atelier/public/styles/overview/_carousel.scss
+++ b/atelier/public/styles/overview/_carousel.scss
@@ -1,7 +1,13 @@
 .image-gallery {
+  margin: 0;
+  padding: 0;
+  display: flex;
   position: relative;
+  background: gray;
   width: 50%;
-  height: auto;
+  height: 50%;
+  overflow: hidden;
+  text-align: center;
   .thumbnails {
     display: flex;
     flex-direction: column;
@@ -14,9 +20,8 @@
     }
   }
   .main {
-    display:flex;
-    position: relative;
     width: 100%;
+    height: auto;
     .previous{
       position:absolute;
       top: 50%;
@@ -30,12 +35,12 @@
       font-weight: bold;
     }
     .main-image {
-      display: none;
+      display: flex;
       object-fit:fill;
       width: 100%;
-      overflow: hidden;
       height: auto;
-      max-width: 100%;
+
     }
+
   }
 }
