--- a/atelier/public/styles/styles.css
+++ b/atelier/public/styles/styles.css
@@ -292,49 +292,30 @@
 .image-gallery {
   margin: 0;
   padding: 0;
+  height: 100vh;
   display: flex;
-  position: relative;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   background: gray;
-  width: 50%;
-  height: 50%;
+}
+.image-gallery .slider {
+  width: 800px;
+  height: 500px;
   overflow: hidden;
-  text-align: center;
 }
-.image-gallery .thumbnails {
+.image-gallery .slider .slides {
+  width: 500%;
+  height: 500px;
   display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 9;
 }
-.image-gallery .thumbnails .thumbnail {
+.image-gallery .slider .slides input {
   display: none;
 }
-.image-gallery .main {
-  width: 100%;
-  height: auto;
+.image-gallery .slider .slide {
+  width: 20%;
+  transition: 2s;
 }
-.image-gallery .main .previous {
-  position: absolute;
-  top: 50%;
-  left: 23%;
-  font-weight: bold;
-}
-.image-gallery .main .next {
-  position: absolute;
-  top: 50%;
-  right: 7%;
-  font-weight: bold;
-}
-.image-gallery .main .main-image {
-  display: flex;
-  -o-object-fit: fill;
-     object-fit: fill;
-  width: 100%;
-  height: auto;
-}
-
 .style-selector .style-selector1 {
   display: flex;
   justify-content: space-around;
@@ -437,25 +418,8 @@ input:focus {
   width: 100px;
 }
 
-*, *::before, *::after {
-  box-sizing: border-box;
-}
-
-.product-summary {
-  float: right;
-}
-
 .navbar {
   display: flex;
   justify-content: space-around;
   margin-top: 30px;
-}
-
-.image-summary {
-  display: flex;
-  justify-content: center;
-}
-
-.slogan {
-  display: flex;
 }/*# sourceMappingURL=styles.css.map */
