--- a/atelier/public/styles/overview/_carousel.scss
+++ b/atelier/public/styles/overview/_carousel.scss
@@ -1,46 +1,82 @@
 .image-gallery {
   margin: 0;
   padding: 0;
+  height:100vh;
   display: flex;
-  position: relative;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   background: gray;
-  width: 50%;
-  height: 50%;
-  overflow: hidden;
-  text-align: center;
-  .thumbnails {
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top:0;
-    left:0;
-    z-index: 9;
-    .thumbnail {
+
+  .slider {
+    width: 800px;
+    height: 500px;
+    overflow: hidden;
+
+    .slides {
+      width: 500%;
+      height:500px;
+      display: flex;
+    }
+    .slides input{
       display: none;
     }
-  }
-  .main {
-    width: 100%;
-    height: auto;
-    .previous{
-      position:absolute;
-      top: 50%;
-      left:23%;
-      font-weight: bold;
+    .slide {
+      width: 20%;
+      transition: 2s;
     }
-    .next {
-      position:absolute;
-      top: 50%;
-      right:7%;
-      font-weight: bold;
-    }
-    .main-image {
-      display: flex;
-      object-fit:fill;
-      width: 100%;
-      height: auto;
+    .slide img{
 
     }
-
   }
+  // margin: 0;
+  // padding: 0;
+  // display: flex;
+  // position: relative;
+  // background: gray;
+  // width: 50%;
+  // height: 50%;
+  // align-items: center;
+  // text-align: center;
+
+  // .thumbnails {
+  //   display: flex;
+  //   flex-direction: column;
+  //   position: absolute;
+  //   top:0;
+  //   left:0;
+  //   z-index: 9;
+
+  //   .thumbnail {
+  //     display: none;
+  //   }
+  // }
+
+  // .main {
+  //   width: 100%;
+  //   height: 100%;
+  //   overflow: hidden;
+
+  //   .main-image {
+  //     display: flex;
+  //     object-fit:fill;
+  //     width: 100%;
+  //     height: auto;
+  //   }
+
+  //   .previous{
+  //     position:absolute;
+  //     top: 50%;
+  //     left:23%;
+  //     font-weight: bold;
+  //   }
+
+  //   .next {
+  //     position:absolute;
+  //     top: 50%;
+  //     right:7%;
+  //     font-weight: bold;
+  //   }
+
+  // }
 }
