--- a/atelier/public/styles/overview/_image-gallery.scss
+++ b/atelier/public/styles/overview/_image-gallery.scss
@@ -1,33 +1,45 @@
 .image-gallery {
   margin: 0;
   padding: 0;
-  height:100vh;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  height: auto;
   background: gray;
-
+  width: 45%;
   .slider {
-    width: 800px;
-    height: 500px;
+    width: 100%;
+    height: auto;
     overflow: hidden;
 
+    .main-previous {
+      // position: absolute;
+      top: 50%;
+      left: 7%;
+      z-index: 9;
+    }
+    .main-next {
+      // position: absolute;
+      top: 50%;
+      left: 75%;
+      z-index: 9;
+    }
     .slides {
-      width: 500%;
-      height:500px;
+      width: 700%;
+      height:auto;
       display: flex;
     }
     .slides input{
       display: none;
     }
-    .slide {
-      width: 20%;
+    .main-image {
+      width: 14.28%;
       transition: 2s;
-    }
-    .slide img{
-      width: 800px;
-      height: 500px;
+      img{
+        width: 100%;
+        max-width: 800px;
+        height: auto;
+      }
     }
   }
   // margin: 0;
