progress demo; still need to refactor carousel

--- a/atelier/public/styles/overview/_overview.scss
+++ b/atelier/public/styles/overview/_overview.scss
@@ -1,6 +1,8 @@
-@import './carousel';
+@import './image-gallery';
 @import './shopping-cart';
 @import './style-selector';
+@import './slogan';
+@import './product-summary';
 
 .image-gallery {
   float: left;
