--- a/atelier/public/styles/related-items/_related_items.scss
+++ b/atelier/public/styles/related-items/_related_items.scss
@@ -154,9 +154,8 @@
 
   .related-modal-title{
     display: flex;
-    position: fixed;
-    left: 10px;
-    top: 10px;
+    position: relative;
+    margin: 10px;
   }
 }
 
@@ -167,7 +166,7 @@
 
 .modal-column {
   float: left;
-  padding: 10px;
+  padding: 20px;
 }
 
 //===============================================================
