--- a/atelier/public/styles/styles.css
+++ b/atelier/public/styles/styles.css
@@ -144,9 +144,8 @@
 }
 .related-modal-content .related-modal-title {
   display: flex;
-  position: fixed;
-  left: 10px;
-  top: 10px;
+  position: relative;
+  margin: 10px;
 }
 
 .related-modal-content:after {
@@ -156,7 +155,7 @@
 
 .modal-column {
   float: left;
-  padding: 10px;
+  padding: 20px;
 }
 
 .outfit-list {
