--- a/atelier/public/styles/ratings-reviews/_ratings_reviews.scss
+++ b/atelier/public/styles/ratings-reviews/_ratings_reviews.scss
@@ -9,8 +9,7 @@
   .reviews-list {
     overflow: auto;
     text-align: left;
-    width: 40%;
-    height: 100vh;
+    width: 60%;
     margin: auto 5%;
     padding-right: 20px;
     font-size: 0.875rem;
@@ -38,10 +37,6 @@
     .break {
       margin: 5% auto;
       border-top: 2px solid gray;
-    }
-    button {
-      position: absolute;
-      display: inline-block;
     }
 
   }
@@ -89,23 +84,8 @@
         width: 83%;
         height: 0.75rem;
         .partial-bar {
-          background-color: gray;
+          background-color: green;
           height: 0.75rem;
-          &.five {
-            width: 40%;
-          }
-          &.four {
-            width: 50%;
-          }
-          &.three {
-            width: 60%;
-          }
-          &.two {
-            width: 70%;
-          }
-          &.one {
-            width: 80%;
-          }
         }
       }
     }
@@ -123,5 +103,9 @@
         width: 100%;
       }
     }
+  }
+
+  .more-reviews{
+    position: absolute;
   }
 }
