--- a/atelier/public/styles/overview/_image-gallery.scss
+++ b/atelier/public/styles/overview/_image-gallery.scss
@@ -7,6 +7,7 @@
   height: auto;
   background: gray;
   width: 45%;
+  position: relative;
 
 
   // main image slider
@@ -17,27 +18,47 @@
 
     // Thumbnails
     .thumbnails {
-      width : 10%;
+      align-items: center;
+      display: flex;
+      flex-direction: column;
+      position: absolute;
+      top: 5%;
+      left: 1%;
+      padding: 8px;
+      z-index: 9;
+      width: 13%;
+
       .thumbnail {
         width: 100%;
         height: 100%;
-        max-width: 200px;
-        max-height: 200px;
+        padding: 5%;
+        max-width: 300px;
+        max-height: 300px;
+        z-index: 9;
+      }
+      .thumbnail-previous {
+
+      }
+      .thumbnail-next{
+
       }
     }
 
 
     // main image navigation arrows
     .main-previous {
-      // position: absolute;
+      color: blanchedalmond;
+      position: absolute;
       top: 50%;
-      left: 7%;
+      left: 17%;
       z-index: 9;
     }
+
     .main-next {
-      // position: absolute;
+      color:blanchedalmond;
+      position: absolute;
       top: 50%;
-      left: 75%;
+      right: 7%;
       z-index: 9;
     }
 
@@ -45,20 +66,24 @@
     // main image slides
     .slides {
       width: 700%;
-      height:auto;
+      height: auto;
       display: flex;
     }
+
     .main-image {
       width: 14.28%;
       transition: 2s;
-      img{
+
+      img {
         width: 100%;
         max-width: 800px;
+        object-fit: cover;
         height: auto;
         z-index: 8;
       }
     }
   }
+
   // margin: 0;
   // padding: 0;
   // display: flex;
