--- a/atelier/public/styles/overview/_image-gallery.scss
+++ b/atelier/public/styles/overview/_image-gallery.scss
@@ -21,6 +21,7 @@
       align-items: center;
       display: flex;
       flex-direction: column;
+      // overflow: hidden;
       position: absolute;
       top: 5%;
       left: 1%;
@@ -30,7 +31,7 @@
 
       .thumbnail {
         width: 100%;
-        height: 100%;
+        height: auto;
         padding: 5%;
         max-width: 300px;
         max-height: 300px;
