--- a/atelier/public/styles/styles.scss
+++ b/atelier/public/styles/styles.scss
@@ -2,12 +2,8 @@
 @import './ratings-reviews/ratings_reviews';
 @import './overview/overview';
 @import './question-answer/question_answer';
+@import './navbar';
 
 
 
-.navbar {
-  display:flex;
-  justify-content: space-around;
-  margin-top: 30px;
-}
 
