--- a/atelier/public/styles/ratings-reviews/_ratings_reviews.scss
+++ b/atelier/public/styles/ratings-reviews/_ratings_reviews.scss
@@ -108,4 +108,23 @@
   .more-reviews{
     position: absolute;
   }
+
+  .modal {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.5);
+  }
+
+  .modal-content {
+    background-color: #f4f4f4;
+    margin: 30% auto;
+    height: 30%;
+    width: 30%;
+
+  }
 }
