navbar background color, banner justify-content center

--- a/atelier/public/styles/_navbar.scss
+++ b/atelier/public/styles/_navbar.scss
@@ -1,6 +1,12 @@
 .navbar {
   display:flex;
-  justify-content: space-around;
   margin-top: 30px;
   margin: auto;
+  justify-content: space-around;
+  background-color: gray;
+  width: 70%
+}
+.banner {
+  display: flex;
+  justify-content: center;
 }
