--- a/atelier/public/styles/overview/_image-gallery.scss
+++ b/atelier/public/styles/overview/_image-gallery.scss
@@ -58,6 +58,7 @@
     .main-next {
       color:blanchedalmond;
       position: absolute;
+      top: 50%;
       right: 7%;
       z-index: 9;
     }
