--- a/atelier/public/styles/styles.scss
+++ b/atelier/public/styles/styles.scss
@@ -3,7 +3,7 @@
 @import './overview/overview';
 @import './question-answer/question_answer';
 @import './shared/star_rating';
-
+@import './navbar';
 /*reset css from user agent stylesheet*/
 * {
   margin: 0;
