scss adjustment for slogan (made it so that the divider between description and characteristics thinner and in line with the image gallery styleSelector is ready to receive props stylSelector scss adjustment to fit 4 in a row todo: starting fetching data from API to determine how state is going to be saved

--- a/atelier/public/styles/overview/_style-selector.scss
+++ b/atelier/public/styles/overview/_style-selector.scss
@@ -1,11 +1,11 @@
 .style-selector{
-  width:fit-content;
-  .style-selector1 {
-    display: flex;
-    justify-content: space-around;
+  width: 100%;
+  overflow:hidden;
+  .style-thumbnails{
+    .style-thumbnail{
+      width: 25%;
+      border-radius: 50%;
+    }
   }
 
-  .style-selector2 {
-    display: flex;
-  }
 }
