--- a/atelier/public/styles/overview/_slogan.scss
+++ b/atelier/public/styles/overview/_slogan.scss
@@ -7,12 +7,13 @@
     float: left;
     width: 64.3%;
     text-align: left;
+    border-right: 1px solid black;
     padding: 5%;
   }
   .characteristics{
     float: right;
     width: 35.7%;
-    border-left: 4px solid black;
+
     padding: 10%;
   }
 }
