silenced some console.logs added ratings for a fetch request for overview; star rating now renders with the right rating

--- a/atelier/public/styles/overview/_style-selector.scss
+++ b/atelier/public/styles/overview/_style-selector.scss
@@ -4,6 +4,8 @@
   .style-thumbnails{
     .style-thumbnail{
       width: 25%;
+      max-width: 60px;
+      max-height: 60px;
       border-radius: 50%;
     }
   }
