following components adjusted with vh: navbar, image gallery, product summary, slogan, style selector; style selector now renders new image on the image gallery;

--- a/atelier/public/styles/_navbar.scss
+++ b/atelier/public/styles/_navbar.scss
@@ -4,7 +4,7 @@
   margin: auto;
   justify-content: space-around;
   background-color: gray;
-  width: 70%
+  width: 90vh;
 }
 .banner {
   display: flex;
