navbar .scss file modified to have vh scale; adjusted image gallery size to be 20vh 10vh higher; thumbnail previous & next is now in a fixed place; thumbnails size adjusted; main image size adjusted to the new image gallery size; added price scss properties; adjusted slogan component size according to the image gallery size adjustment; added className to logo and search bar; thumbnail navigation renewed to follow the main image's sliding motion, thumbnail navigator disappears when at the end or less than 7 pictures; product summary Price render from src/components/related-items/Price.js; deleted dummy data imports on StyleSelector.js; Price.js now ready to render the right price;

--- a/atelier/public/styles/overview/_slogan.scss
+++ b/atelier/public/styles/overview/_slogan.scss
@@ -1,11 +1,12 @@
 .slogan {
+  padding: 2vh;
   display: flex;
-  width: 90vh;
+  width: 110vh;
   margin: auto;
   text-align: center;
   .description {
     float: left;
-    width: 60vh;
+    width: 80vh;
     text-align: left;
     border-right: 1px solid black;
     padding: 2vh;
