--- a/atelier/public/styles/_navbar.scss
+++ b/atelier/public/styles/_navbar.scss
@@ -1,10 +1,17 @@
 .navbar {
   display:flex;
-  margin-top: 30px;
   margin: auto;
-  justify-content: space-around;
+  justify-content: space-between;
   background-color: gray;
-  width: 90vh;
+  width: 110vh;
+  .logo {
+    padding: 0.5vh;
+    margin-left: 0.5vh;
+  }
+  .search-bar {
+    padding: 0.5vh;
+    margin-right: 0.5vh;
+  }
 }
 .banner {
   display: flex;
