--- a/atelier/public/styles/overview/_image-gallery.scss
+++ b/atelier/public/styles/overview/_image-gallery.scss
@@ -5,8 +5,8 @@
   justify-content: center;
   align-items: center;
   background: gray;
-  width: 60vh;
-  height: 40vh;
+  width: 80vh;
+  height: 50vh;
   position: relative;
 
 
@@ -17,31 +17,44 @@
     overflow: hidden;
 
     // Thumbnails
+    .thumbnail-previous {
+      position: absolute;
+      top: 1vh;
+      left: 5vh;
+      height: 3vh;
+      z-index: 9;
+    }
+    .thumbnail-next{
+      position: absolute;
+      height: 3vh;
+      left: 5vh;
+      bottom: 1vh;
+      z-index: 9;
+    }
     .thumbnails {
       align-items: center;
       display: flex;
+      top: 4vh;
       flex-direction: column;
-      // overflow: hidden;
+      overflow: hidden;
       position: absolute;
-
       left: 1vh;
-      padding: 1vh;
       z-index: 9;
-      width: 13%;
-
+      width: 9vh;
+      height: 48vh;
       .thumbnail {
+        margin-bottom: 0.5vh;
+        display: flex;
         width: 100%;
-        height: 5vh;
-        padding: 5%;
-        max-width: 300px;
-        max-height: 300px;
+        height: 5.5vh;
         z-index: 9;
-      }
-      .thumbnail-previous {
-
-      }
-      .thumbnail-next{
-
+        overflow: hidden;
+        justify-content: center;
+        img {
+          display: flex;
+          height: 10vh;
+          width: auto
+        }
       }
     }
 
@@ -74,14 +87,14 @@
     .main-image {
       display: flex;
       justify-content: center;
-      width: 60vh;
+      width: 80vh;
       transition: 2s;
       height: 100%;
       overflow: hidden;
 
       img {
         width: auto;
-        max-height: 40vh;
+        max-height: 50vh;
         object-fit: cover;
         height: 100%;
         z-index: 8;
