--- a/atelier/public/styles/overview/_product-summary.scss
+++ b/atelier/public/styles/overview/_product-summary.scss
@@ -1,4 +1,20 @@
 .product-summary {
   width: 30vh;
   padding: 2vh;
+  .card-price{
+    font-size: medium;
+    display: flex;
+  }
+
+  .stroke-price{
+    font-size: medium;
+    display: inline-flex;
+    text-decoration: line-through red;
+  }
+  .sale-price{
+    font-size: medium;
+    display: inline-flex;
+    margin: 5px;
+    color: red
+  }
 }
