added margin for category, product name, price; added margin to style selector; deleted unnescessary comments in StyleSelector.js; added a functionality to highlight the first element when it first renders;

--- a/atelier/public/styles/overview/_product-summary.scss
+++ b/atelier/public/styles/overview/_product-summary.scss
@@ -14,7 +14,12 @@
   .sale-price{
     font-size: medium;
     display: inline-flex;
-    margin: 5px;
     color: red
+  }
+  h5 {
+    margin-bottom: 1vh;
+  }
+  h1 {
+    margin-bottom: 1vh;
   }
 }
