--- a/atelier/public/styles/overview/_style-selector.scss
+++ b/atelier/public/styles/overview/_style-selector.scss
@@ -2,6 +2,7 @@
   display: inline-block;
   width: 100%;
   overflow:hidden;
+  margin-bottom: 1vh;
   .style-thumbnails{
     display: -webkit-box;
     width:100%;
