--- a/atelier/public/styles/overview/_image-gallery.scss
+++ b/atelier/public/styles/overview/_image-gallery.scss
@@ -15,7 +15,11 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
-
+    .thumbnail-container {
+      height: 3000%;
+      width: 100%;
+      display: flex;
+    }
     // Thumbnails
     .thumbnail-previous {
       position: absolute;
@@ -41,7 +45,7 @@
       left: 1vh;
       z-index: 9;
       width: 9vh;
-      height: 48vh;
+      height: 42vh;
       .thumbnail {
         margin-bottom: 0.5vh;
         display: flex;
@@ -53,7 +57,7 @@
         img {
           display: flex;
           height: 10vh;
-          width: auto
+          width: auto;
         }
       }
     }
@@ -79,7 +83,7 @@
 
     // main image slides
     .slides {
-      width: 1000%;
+      width: 3000%;
       height: 100%;
       display: flex;
     }
