--- a/atelier/public/styles/ratings-reviews/_ratings_reviews.scss
+++ b/atelier/public/styles/ratings-reviews/_ratings_reviews.scss
@@ -1,19 +1,22 @@
 
 .ratings-reviews {
-
+  overflow: auto;
   margin-top: 8%;
   display: flex;
   justify-content: center;
-
   /*for the ReviewsList component*/
   .reviews-list {
     overflow: auto;
     text-align: left;
-    width: 60%;
-    margin: auto 5%;
-    padding-right: 20px;
+    width: 30rem;
+    margin: 5%;
     font-size: 0.875rem;
     position: relative;
+    right: 40px;
+    h4 {
+      font-size: large;
+      font-weight: bolder;
+    }
     /*number of stars and the user*/
     .star-user {
       display: flex;
@@ -25,10 +28,36 @@
     }
     /*review paragraph*/
     p {
+      width: 100%;
+      height: 100%;
       margin: 5% auto;
       letter-spacing: -0.02rem;
       word-spacing: -0.08rem;
       line-height: 1rem;
+      .thumbs {
+        width: 100px;
+        height: 100px;
+        &:hover {
+          opacity: 0.7;
+        }
+      }
+      .img-modal {
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        overflow: auto;
+        background-color: rgba(0,0,0,0.5);
+        button {
+          position: fixed;
+          right: 0px;
+          top: 0px;
+          height: 100px;
+          width: 100px;
+        }
+      }
     }
     /*helpful prompt*/
     #helpful {
@@ -38,7 +67,14 @@
       margin: 5% auto;
       border-top: 2px solid gray;
     }
-
+    .sort-options {
+      font-size: small;
+      margin-bottom: 8px;
+      .sort-dropdown {
+        border: 0px;
+        outline: 0px;
+      }
+    }
   }
 
 
@@ -48,7 +84,6 @@
     /*make the parent container relative so children can use absolute positioning*/
     position: relative;
     width: 35%;
-
     h5 {
       position: absolute;
       top: 0px;
@@ -73,15 +108,17 @@
       text-align: left;
     }
 
-
     .progress-bar {
       font-size: 0.75rem;
       margin: 2% auto;
       display:flex;
-      justify-content: space-between;
+      width: 100%;
+      flex-direction: row;
       .whole-bar {
+        margin-left: 20px;
         background-color: lightgray;
-        width: 83%;
+        width: 70%;
+        align: left;
         height: 0.75rem;
         .partial-bar {
           background-color: green;
@@ -91,22 +128,47 @@
     }
   }
   .range {
-    text-align: left;
-    margin: 8% auto;
-    .size {
+    margin-top: 10%;
+    .characteristics {
       input {
-        width: 100%;
+        -webkit-appearance: none;
+        appearance: none;
+        background: transparent;
+        cursor: pointer;
+        height: 20px;
+        width: 85%;
+        &::-webkit-slider-runnable-track {
+          background: lightgray;
+          height: 0.5rem;
+        }
+        &::-webkit-slider-thumb {
+          -webkit-appearance: none;
+          appearance: none;
+          height:16px;
+          width:8px;
+          background-color: gray;
+          margin-top: -3px;
+        }
       }
-    }
-    .comfort {
-      input {
-        width: 100%;
-      }
+
     }
   }
 
-  .more-reviews{
-    position: absolute;
+  .more-write-buttons{
+    display: inline-block;
+    position: relative;
+    right: 20px;
+    bottom: 40px;
+    width: 250px;
+    button {
+      border: 2px outset gray;
+      border-radius: 3px;
+      background-color: lightgray;
+      height: 50px;
+      width:100px;
+      margin-right: 4px;
+      cursor:pointer;
+    }
   }
 
   .modal {
@@ -121,10 +183,40 @@
   }
 
   .modal-content {
+    overflow: auto;
+    padding: 10%;
     background-color: #f4f4f4;
     margin: 30% auto;
-    height: 30%;
-    width: 30%;
-
+    height: 80%;
+    width: 90%;
+    table {
+      padding: 10px;
+      display: flex;
+      justify-content: flex-start;
+      width: 100%;
+      formfield {
+        margin-right: 10px;
+        display:inline-block;
+        label {
+          font-size: small;
+        }
+      }
+    }
+    textarea {
+      width: 90%;
+      height: 80%;
+    }
   }
+}
+
+.image-upload {
+  img {
+    height: 200px;
+    width: 200px;
+    display: inline-block;
+  }
+}
+
+#recommend-product {
+  font-size: 0.7rem;
 }
