--- a/atelier/public/styles/styles.css
+++ b/atelier/public/styles/styles.css
@@ -265,6 +265,7 @@
 }
 
 .ratings-reviews {
+  overflow: auto;
   margin-top: 8%;
   display: flex;
   justify-content: center;
@@ -274,14 +275,18 @@
 .ratings-reviews .reviews-list {
   overflow: auto;
   text-align: left;
-  width: 60%;
-  margin: auto 5%;
-  padding-right: 20px;
+  width: 30rem;
+  margin: 5%;
   font-size: 0.875rem;
   position: relative;
+  right: 40px;
   /*number of stars and the user*/
   /*review paragraph*/
   /*helpful prompt*/
+}
+.ratings-reviews .reviews-list h4 {
+  font-size: large;
+  font-weight: bolder;
 }
 .ratings-reviews .reviews-list .star-user {
   display: flex;
@@ -292,10 +297,36 @@
   font-size: 0.75rem;
 }
 .ratings-reviews .reviews-list p {
+  width: 100%;
+  height: 100%;
   margin: 5% auto;
   letter-spacing: -0.02rem;
   word-spacing: -0.08rem;
   line-height: 1rem;
+}
+.ratings-reviews .reviews-list p .thumbs {
+  width: 100px;
+  height: 100px;
+}
+.ratings-reviews .reviews-list p .thumbs:hover {
+  opacity: 0.7;
+}
+.ratings-reviews .reviews-list p .img-modal {
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.ratings-reviews .reviews-list p .img-modal button {
+  position: fixed;
+  right: 0px;
+  top: 0px;
+  height: 100px;
+  width: 100px;
 }
 .ratings-reviews .reviews-list #helpful {
   font-size: 0.75rem;
@@ -303,6 +334,14 @@
 .ratings-reviews .reviews-list .break {
   margin: 5% auto;
   border-top: 2px solid gray;
+}
+.ratings-reviews .reviews-list .sort-options {
+  font-size: small;
+  margin-bottom: 8px;
+}
+.ratings-reviews .reviews-list .sort-options .sort-dropdown {
+  border: 0px;
+  outline: 0px;
 }
 .ratings-reviews .ratings {
   /*make the parent container relative so children can use absolute positioning*/
@@ -336,11 +375,14 @@
   font-size: 0.75rem;
   margin: 2% auto;
   display: flex;
-  justify-content: space-between;
+  width: 100%;
+  flex-direction: row;
 }
 .ratings-reviews .ratings .progress-bar .whole-bar {
+  margin-left: 20px;
   background-color: lightgray;
-  width: 83%;
+  width: 70%;
+  align: left;
   height: 0.75rem;
 }
 .ratings-reviews .ratings .progress-bar .whole-bar .partial-bar {
@@ -348,17 +390,44 @@
   height: 0.75rem;
 }
 .ratings-reviews .range {
-  text-align: left;
-  margin: 8% auto;
+  margin-top: 10%;
 }
-.ratings-reviews .range .size input {
-  width: 100%;
+.ratings-reviews .range .characteristics input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+       appearance: none;
+  background: transparent;
+  cursor: pointer;
+  height: 20px;
+  width: 85%;
 }
-.ratings-reviews .range .comfort input {
-  width: 100%;
+.ratings-reviews .range .characteristics input::-webkit-slider-runnable-track {
+  background: lightgray;
+  height: 0.5rem;
 }
-.ratings-reviews .more-reviews {
-  position: absolute;
+.ratings-reviews .range .characteristics input::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  height: 16px;
+  width: 8px;
+  background-color: gray;
+  margin-top: -3px;
+}
+.ratings-reviews .more-write-buttons {
+  display: inline-block;
+  position: relative;
+  right: 20px;
+  bottom: 40px;
+  width: 250px;
+}
+.ratings-reviews .more-write-buttons button {
+  border: 2px outset gray;
+  border-radius: 3px;
+  background-color: lightgray;
+  height: 50px;
+  width: 100px;
+  margin-right: 4px;
+  cursor: pointer;
 }
 .ratings-reviews .modal {
   position: fixed;
@@ -371,10 +440,39 @@
   background-color: rgba(0, 0, 0, 0.5);
 }
 .ratings-reviews .modal-content {
+  overflow: auto;
+  padding: 10%;
   background-color: #f4f4f4;
   margin: 30% auto;
-  height: 30%;
-  width: 30%;
+  height: 80%;
+  width: 90%;
+}
+.ratings-reviews .modal-content table {
+  padding: 10px;
+  display: flex;
+  justify-content: flex-start;
+  width: 100%;
+}
+.ratings-reviews .modal-content table formfield {
+  margin-right: 10px;
+  display: inline-block;
+}
+.ratings-reviews .modal-content table formfield label {
+  font-size: small;
+}
+.ratings-reviews .modal-content textarea {
+  width: 90%;
+  height: 80%;
+}
+
+.image-upload img {
+  height: 200px;
+  width: 200px;
+  display: inline-block;
+}
+
+#recommend-product {
+  font-size: 0.7rem;
 }
 
 .image-gallery {
