--- a/atelier/public/styles/overview/_style-selector.scss
+++ b/atelier/public/styles/overview/_style-selector.scss
@@ -8,29 +8,15 @@
     width:100%;
     flex-wrap: wrap;
     .style-thumbnail{
-      width: 25%;
-      .style-name {
-        font-size: 0.1vh;
-        width: 100%;
-      }
-      .style-check-box{
-        position: absolute;
-        background: white;
-        width: 1.5vh;
-        color: rgb(177, 150, 108);
-        display: none;
-      }
-      .style-thumbnail-container{
-        display: flex;
-        width: 100%;
-        aspect-ratio: 1/1;
-        border-radius: 50%;
-        overflow: hidden;
-        justify-content: center;
-        img{
-          width: 10vh;
-          height: auto;
-        }
+      display: flex;
+      width: 6.5vh;
+      height: 6.5vh;
+      border-radius: 50%;
+      overflow: hidden;
+      justify-content: center;
+      img{
+        width: 10vh;
+        height: auto;
       }
     }
   }
